担当箇所を制作中

--- a/templates/login.html
+++ b/templates/login.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
+    <div class="header">
+        <a href="/" class="title">おしまっし金沢</a>
+        <!-- ユーザーがログインしていない場合 -->
+        {% if not current_user.is_authenticated %}
+        <a href="{{ url_for('register') }}">Sign up</a>
+        <!-- ユーザーがログインしている場合 -->
+        {% else %}
+        <a href="{{ url_for('logout') }}">Logout</a>
+    {% endif %}
+    </div>
     <h1>Login</h1>
     <form method="post" action="{{ url_for('login') }}">
         <div>
