--- a/templates/night/stamp1.html
+++ b/templates/night/stamp1.html
@@ -2,7 +2,7 @@
 <html lang="ja" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>兼六園</title>
+        <title>アドバンスドエアー</title>
         <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/kenrokuen.css') }}">
     </head>
