観光案内所一覧、夜のスタンプラリーのバグ解消、湯桶温泉のバグ解消

--- a/templates/main.html
+++ b/templates/main.html
@@ -45,5 +45,60 @@
             夜ならではの静けさと美しさを、金沢の夜に感じることができます。</p>
         </div>
     </div>
+    <div>
+        <h2>観光案内所一覧</h2>
+        <div>
+            <h3>金沢駅観光案内所</h3>
+            <p>サービス内容：石川県内の観光案内・イベント情報の提供、観光パンフレット設置、傘の無料貸出、車イス貸出、宿への当日手荷物配送（手ぶら観光）サービス、旅行商品、金沢市内１日フリー乗車券や定期観光バスなどのチケットを販売、長靴貸出　等</p>
+            <p>石川県金沢市木ノ新保町1-1 金沢駅構内<br>
+                TEL：076-232-6200　FAX：076-232-6210<br>
+                時間：8:30〜20:00（無休）</p>
+        </div>
+        <div>
+            <h3>金沢中央観光案内所</h3>
+            <p>サービス内容：石川県内の観光案内・イベント情報の提供、観光パンフレット設置、Wi-Fi、傘の無料貸出、車イス貸出、当日宿泊予約受付、長靴貸出　等</p>
+            <p>石川県金沢市南町4-1　金沢ニューグランドビル1階<br>
+                TEL：076-254-5020　FAX：076-254-5028<br>
+                時間：10:00～21:00（無休）</p>
+        </div>
+        <div>
+            <h3>観光案内所（金沢エムザ）</h3>
+            <p>サービス内容：観光案内、Wi-Fi</p>
+            <p>〒920-0855　金沢市武蔵町15-1 金沢エムザ 1階<br>
+                TEL：076-260-1111<br>
+                時間：10:00〜19:30 </p>
+        </div>
+        <div>
+            <h3>金沢市西茶屋資料館</h3>
+            <p>観光ボランティアガイド「まいどさん」が常駐
+                サービス内容：観光案内、まいどさんによるにし茶屋街付近のガイド、観光パンフレット設置、Wi-Fi</p>
+            <p>〒921-8031　石川県金沢市野町2-25-18<br>
+                TEL：076-247-8110<br>                
+                時間：9:30～17:00（無休）</p>
+        </div>
+        <div>
+            <h3>長町武家屋敷休憩館</h3>
+            <p>観光ボランティアガイド「まいどさん」が常駐
+                サービス内容：観光案内、まいどさんによる長町武家屋敷跡界隈のガイド、観光パンフレット設置、Wi-Fi、傘の無料貸出、車イス貸出</p>
+            <p>〒920-0865　石川県金沢市長町2-4-36<br>
+                TEL：076-263-1951<br>
+                時間：9:00～17:00(12月1日～3月15日は9:30～17:00)</p>
+        </div>
+        <div>
+            <h3>ひがし茶屋休憩館</h3>
+            <p>観光ボランティアガイド「まいどさん」が常駐
+                サービス内容：観光案内、まいどさんによるひがし茶屋街周辺のガイド、観光パンフレット設置、Wi-Fi、傘の無料貸出、車イス貸出</p>
+            <p>〒920-0831　石川県金沢市観音町1-3-8<br>
+                TEL：076-253-0087<br>
+                時間：9:00～17:00(12月1日～3月15日は9:30～17:00)</p>
+        </div>
+        <div>
+            <h3>外国語対応・観光案内カウンター （金沢駅観光案内所併設）</h3>
+            <p>金沢駅観光案内所に併設されている外国人対応観光案内カウンターでは、通訳ボランティア『金沢グッドウィルガイドネットワーク(KGGN)』が、金沢の観光情報や交通情報を英語で案内しています。</p>
+            <p>石川県金沢市木ノ新保町1-1 金沢駅構内<br>
+                時間：9:00～19:00（6月及び12～2月は9:30～18:30）、無休<br>
+                TEL：076-232-3933</p>
+        </div>
+    </div>
 </body>
 </html>
