--- a/templates/stamp_rally_night.html
+++ b/templates/stamp_rally_night.html
@@ -8,24 +8,38 @@
 </head>
 <body>
     {% include 'home.html' %}
+    <a href="../stamp_rally_morning">朝<a>
+    <a href="../stamp_rally_noon">昼<a>
     <h1>スタンプラリー</h1>
     <div class="stamp-card">
         <h2>スタンプカード</h2>
         <div class="row">
-            <a href="{{ url_for('stamp1', stamp_name='stamp1') }}" id="stamp1" class="stamp {{ 'collected' if stamps_status.get('stamp1', False) else '' }}">stamp 1</a>
-            <a href="{{ url_for('stamp2', stamp_name='stamp2') }}" id="stamp2" class="stamp {{ 'collected' if stamps_status.get('stamp2', False) else '' }}">Stamp 2</a>
-            <a href="{{ url_for('stamp3', stamp_name='stamp3') }}" id="stamp3" class="stamp {{ 'collected' if stamps_status.get('stamp3', False) else '' }}">Stamp 3</a>
+            <a href="{{ url_for('night_stamp1', stamp_name='stamp1') }}" id="stamp1" class="stamp {{ 'collected' if stamps_status.get('stamp1', False) else '' }}">stamp 1</a>
+            <a href="{{ url_for('night_stamp2', stamp_name='stamp2') }}" id="stamp2" class="stamp {{ 'collected' if stamps_status.get('stamp2', False) else '' }}">Stamp 2</a>
+            <a href="{{ url_for('night_stamp3', stamp_name='stamp3') }}" id="stamp3" class="stamp {{ 'collected' if stamps_status.get('stamp3', False) else '' }}">Stamp 3</a>
         </div>
         <div class="row">
-            <a href="{{ url_for('stamp4', stamp_name='stamp4') }}" id="stamp4" class="stamp {{ 'collected' if stamps_status.get('stamp4', False) else '' }}">Stamp 4</a>
-            <a href="{{ url_for('stamp5', stamp_name='stamp5') }}" id="stamp5" class="stamp {{ 'collected' if stamps_status.get('stamp5', False) else '' }}">Stamp 5</a>
-            <a href="{{ url_for('stamp6', stamp_name='stamp6') }}" id="stamp6" class="stamp {{ 'collected' if stamps_status.get('stamp6', False) else '' }}">Stamp 6</a>
+            <a href="{{ url_for('night_stamp4', stamp_name='stamp4') }}" id="stamp4" class="stamp {{ 'collected' if stamps_status.get('stamp4', False) else '' }}">Stamp 4</a>
+            <a href="{{ url_for('night_stamp5', stamp_name='stamp5') }}" id="stamp5" class="stamp {{ 'collected' if stamps_status.get('stamp5', False) else '' }}">Stamp 5</a>
+            <a href="{{ url_for('night_stamp6', stamp_name='stamp6') }}" id="stamp6" class="stamp {{ 'collected' if stamps_status.get('stamp6', False) else '' }}">Stamp 6</a>
         </div>
         <div class="row">
-            <a href="{{ url_for('stamp7', stamp_name='stamp7') }}" id="stamp7" class="stamp {{ 'collected' if stamps_status.get('stamp7', False) else '' }}">Stamp 7</a>
-            <a href="{{ url_for('stamp8', stamp_name='stamp8') }}" id="stamp8" class="stamp {{ 'collected' if stamps_status.get('stamp8', False) else '' }}">Stamp 8</a>
-            <a href="{{ url_for('stamp9', stamp_name='stamp9') }}" id="stamp9" class="stamp {{ 'collected' if stamps_status.get('stamp9', False) else '' }}">Stamp 9</a>
+            <a href="{{ url_for('night_stamp7', stamp_name='stamp7') }}" id="stamp7" class="stamp {{ 'collected' if stamps_status.get('stamp7', False) else '' }}">Stamp 7</a>
+            <a href="{{ url_for('night_stamp8', stamp_name='stamp8') }}" id="stamp8" class="stamp {{ 'collected' if stamps_status.get('stamp8', False) else '' }}">Stamp 8</a>
+            <a href="{{ url_for('night_stamp9', stamp_name='stamp9') }}" id="stamp9" class="stamp {{ 'collected' if stamps_status.get('stamp9', False) else '' }}">Stamp 9</a>
         </div>
+    </div>
+    <div>
+        <p>スタンプごとの観光地</p>
+        <p>stamp1: アドバンスドエアー</p>
+        <p>stamp2: 尾山神社</p>
+        <p>stamp3: 湯涌温泉</p>
+        <p>stamp4: 金沢駅・もてなしドーム</p>
+        <p>stamp5: 主計町茶屋街</p>
+        <p>stamp6: 金沢港クルーズターミナル</p>
+        <p>stamp7: 金沢城</p>
+        <p>stamp8: 西茶屋街</p>
+        <p>stamp9: ひがし茶屋街</p>
     </div>
 </body>
 </html>
