--- a/templates/stamp_rally_noon.html
+++ b/templates/stamp_rally_noon.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     {% include 'home.html' %}
+    <a href="../stamp_rally_morning">朝<a>
+    <a href="../stamp_rally_night">夜<a>
     <h1>スタンプラリー</h1>
     <div class="stamp-card">
         <h2>スタンプカード</h2>
@@ -27,6 +29,18 @@
             <a href="{{ url_for('noon_stamp9', stamp_name='stamp9') }}" id="stamp9" class="stamp {{ 'collected' if stamps_status.get('stamp9', False) else '' }}">Stamp 9</a>
         </div>
         
+    </div>
+    <div>
+        <p>スタンプごとの観光地</p>
+        <p>stamp1: 武家屋敷跡　野村家</p>
+        <p>stamp2: 鈴木大拙館</p>
+        <p>stamp3: 忍者武器ミュージアム</p>
+        <p>stamp4: 金沢市立安江金箔工芸館</p>
+        <p>stamp5: 金沢ふるさと偉人館</p>
+        <p>stamp6: KAMU　Kanazawa</p>
+        <p>stamp7: 21世紀美術館</p>
+        <p>stamp8: 金沢能楽美術館</p>
+        <p>stamp9: 中村記念美術館</p>
     </div>
 </body>
 </html>
