--- a/templates/main.html
+++ b/templates/main.html
@@ -11,7 +11,7 @@
     <div>
         <h2>あなたのまだ知らない金沢を見つけに行きませんか？</h2>
     </div>
-    <div>
+    {% comment %} <div>
         <p>古き良き街並みとモダンな魅力が融合したこの町では、<br>
         季節によって見える景色が異なり、違う楽しみ方ができます。<br>
         金沢市観光スタンプラリーでは、朝、昼、夜と時間ごとに<br>
@@ -99,6 +99,6 @@
                 時間：9:00～19:00（6月及び12～2月は9:30～18:30）、無休<br>
                 TEL：076-232-3933</p>
         </div>
-    </div>
+    </div> {% endcomment %}
 </body>
 </html>
