--- a/static/css/noon1.css
+++ b/static/css/noon1.css
@@ -117,7 +117,7 @@
 }
 .kankoutimei-box {
   background: #fff8bc;
-  width: 1920px;
+  width: auto;
   height: 117px;
   position: absolute;
   left: 0px;
