--- a/templates/morning/stamp8.html
+++ b/templates/morning/stamp8.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>兼六園</title>
+        <link rel="stylesheet" href="styles.css">
         <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
     </head>
     <body>
