--- a/templates/morning/stamp7.html
+++ b/templates/morning/stamp7.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>兼六園</title>
         <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/mooning7') }}">
     </head>
     <body>
         <header>
