--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,3 +31,9 @@ body, html {
     display: flex;
     display: -webkit-flex;
 }
+
+.picture {
+    width: 300px;
+    height: auto;
+    padding: 10px;
+}
