--- a/templates/main.html
+++ b/templates/main.html
@@ -18,8 +18,8 @@
         異なる視点から金沢の魅力を探求します。</p>
     </div>
     <div class="flex_column">
-        <p><img src="{{ url_for('static', filename='images/asa.jpg') }}" alt="Sample Image"></p>
-        <div>
+        <img src="{{ url_for('static', filename='images/asa.jpg') }}" alt="Sample Image" class="picture">
+        <div> 
             <a href="../stamp_rally_morning"><h3>朝の金沢 - 穏やかな始まり</h3></a>
             <p>朝のスタンプラリーでは、金沢の穏やかな朝の顔を紹介します。<br>
             街がゆっくりと目覚める時間、伝統的な建物が穏やかな光に包まれる様子や、<br>
@@ -27,7 +27,7 @@
         </div>
     </div>
     <div class="flex_column">
-        <p><img src="{{ url_for('static', filename='images/hiru.jpg') }}" alt="Sample Image"></p>
+        <img src="{{ url_for('static', filename='images/hiru.jpg') }}" alt="Sample Image" class="picture">
         <div>
             <a href="../stamp_rally_noon"><h3>昼の金沢 - 光り輝く歴史と文化</h3></a>
             <p>昼間は、金沢の歴史と文化が輝く時間。<br>
@@ -37,7 +37,7 @@
         </div>
     </div>
     <div class="flex_column">
-        <p><img src="{{ url_for('static', filename='images/yoru.jpg') }}" alt="Sample Image"></p>
+        <img src="{{ url_for('static', filename='images/yoru.jpg') }}" alt="Sample Image" class="picture">
         <div>
             <a href="../stamp_rally_night"><h3>夜の金沢 - 幻想的な夜景</h3></a>
             <p>夜のスタンプラリーでは、金沢のもう一つの顔、幻想的な夜景を紹介します。<br>
