--- a/templates/noon/stamp5.html
+++ b/templates/noon/stamp5.html
@@ -2,17 +2,22 @@
 <html lang="ja" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>兼六園</title>
+        <title>金沢ふるさと偉人館</title>
         <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/ninja.css') }}">
     </head>
     <body>
         <header>
             <div>
                 <a href="../">ホーム</a>
                 <a href="../stamp_rally_noon">スタンプ</a>
+
             </div>
         </header>
-        <h1>兼六園</h1>
+        <h1>金沢ふるさと偉人館</h1>
+        <p>
+            金沢ふるさと偉人館では金沢ゆかりの高峰譲吉、木村栄、八田與一、三宅雪嶺、藤岡作太郎、西田幾多郎、鈴木大拙、中西悟堂、松田権六、谷口吉郎、野口遵など近代日本を支えた偉人たちについてその生涯と業績を紹介している観光スポットとなっています。企画展や講演会も年に2、3回開催しています。
+        </p>
         <p>-------------</p>
         <button onclick="startCamera()">カメラ起動・QRコード読み取り開始</button>
         <button id="stop-camera-btn">カメラ停止</button>
@@ -133,15 +138,13 @@
         
         <p>-------------</p>
         <p>地図</p>
-        <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3204.6675647453562!2d136.66007657529306!3d36.56212777231593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff83383f9b25905%3A0x970a7b3df003f2e4!2z5YW85YWt5ZyS!5e0!3m2!1sja!2sjp!4v1700196815906!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
-
+        <p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m19!1m8!1m3!1d1870.7238308883868!2d136.65768678426292!3d36.55918876464551!3m2!1i1024!2i768!4f13.1!4m8!3e3!4m0!4m5!1s0x5ff83478a655dc55%3A0xf05166b2b29395bb!2z55-z5bed55yM6YeR5rKi5biC5LiL5pys5aSa55S677yW55Wq5LiB77yR77yY4oiS77yUIOmHkeayouOBteOCi-OBleOBqOWBieS6uumkqA!3m2!1d36.5592586!2d136.6578779!5e0!3m2!1sja!2sjp!4v1702621761258!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </p>
         <p>コメント投稿</p>
         <div>
             <form action="/comment" method="post">
-                <div>
-                    <label for="name">名前</label>
-                    <input type="text" name="name" id="name">
-                </div>
+                
                 <div>
                     <label for="comment">コメント</label>
                     <textarea name="comment" id="comment"></textarea>
@@ -153,11 +156,11 @@
         </div>
         <p>コメント一覧</p>
         {% for comment in comments %}
-            <li>
+            <ul>
                 <p>名前：{{ comment.author.name }}</p>
                 <p>コメント：{{ comment.comment }}</p>
                 <p>投稿日：{{ comment.comment_date.strftime('%Y-%m-%d %H:%M') }}</p>
-            </li>
+            </ul>
         {% endfor %}
         
-    </body> 
+    </body>
