--- a/templates/night/stamp2.html
+++ b/templates/night/stamp2.html
@@ -62,6 +62,7 @@
                         if (code) {
                             console.log('QRコード検出:', code.data);
                             if (code.data === 'Oyamazinzya') {
+                                alert('成功しました')
                                 updateStampStatus('stamp2', 'night'); // 時間帯を'noon'に指定
                             } else {
                                 alert('スキャンされたQRコードが一致しません。');
@@ -149,10 +150,6 @@
             <div class="form-container">
                 <p>コメント投稿</p>
                 <form action="/comment" method="post">
-                    <div>
-                        <label for="name">名前</label>
-                        <input type="text" name="name" id="name" required>
-                    </div>
                     <div>
                         <label for="comment">コメント</label>
                         <textarea name="comment" id="comment" required></textarea>
