--- a/templates/night/stamp3.html
+++ b/templates/night/stamp3.html
@@ -63,6 +63,7 @@
                         if (code) {
                             console.log('QRコード検出:', code.data);
                             if (code.data === 'yurakuonsen') {
+                                alert('成功しました')
                                 updateStampStatus('stamp3', 'night'); // 時間帯を'noon'に指定
                             } else {
                                 alert('スキャンされたQRコードが一致しません。');
