--- a/templates/noon/stamp9.html
+++ b/templates/noon/stamp9.html
@@ -62,6 +62,7 @@
                         if (code) {
                             console.log('QRコード検出:', code.data);
                             if (code.data === 'NakamuraKinenBizyutukan') {
+                                alert('成功しました')
                                 updateStampStatus('stamp9', 'noon'); // 時間帯を'noon'に指定
                             } else {
                                 alert('スキャンされたQRコードが一致しません。');
